objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Subtype__c</fullName>
        <label>Action Subtype</label>
        <picklist>
            <controllingField>Action_Type__c</controllingField>
            <picklistValues>
                <fullName>Apology Letter Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment Downgraded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Suppression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Aways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depot Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forwarded to Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRU Instructed to Start Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 2 Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 3 Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searches Checked - Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searches Checked - Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C File Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>SR Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Actions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation Checks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Am_I_the_Assigned_to_Users_Manager__c</fullName>
        <description>Used to calculate whether the logged in user is the Assigned to Users Manger or not.</description>
        <formula>IF( Owner:User.ManagerId = $User.Id , True , False)</formula>
        <label>Am I the Assigned to Users Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Users_Manager__c</fullName>
        <description>Shows the name of the record Owners Manager as setup on User records. This field is used for reporting at team level.</description>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Assigned to Users Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Tagged__c</fullName>
        <description>Calculates if the Call Tagging field has been populated or not. Used to work out call tagging percentages per agent on reports.</description>
        <formula>IF(ISPICKVAL(Call_Tagging__c, &quot;&quot;), FALSE, TRUE)</formula>
        <label>Call Tagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Tagging__c</fullName>
        <inlineHelpText>Use these tags to categorise your call with the customer. 

Please add &apos;Comments&apos; if you are tagging the Call as &apos;Other&apos;.</inlineHelpText>
        <label>Call Tagging</label>
        <picklist>
            <picklistValues>
                <fullName>Track - Status Update or Case Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking - Status Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case - Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case - Transfer To Case Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationery, Re-Delivery, Hard Copy POD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to Stubbins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please Complete Comments Field)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_for_reporting__c</fullName>
        <description>Use this field in reports where the standard field will not show the time in reports</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Calculates the Hour that the record was created in and can be used in reports</description>
        <formula>IF ( DATEVALUE(Created_Date_Time_for_reporting__c) &gt;=
DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(Created_Date_Time_for_reporting__c) &lt;
DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(Created_Date_Time_for_reporting__c)),11,1) - DATE (1900,1,7),7))
),
VALUE (MID ( TEXT (Created_Date_Time_for_reporting__c+ 1/24 ), 12, 2)),
VALUE (MID ( TEXT (Created_Date_Time_for_reporting__c+ 0/24), 12, 2))
)</formula>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time_for_Reporting__c</fullName>
        <description>Use this field in reports where the standard field will not show the time in reports</description>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Agent__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OHCB_Achieved__c</fullName>
        <description>If Action SubType is First Customer Contact &amp; SLA Deadline is not blank &amp; SLA Minutes in Business Hours is less than 61 then sets value to TRUE else FALSE. Used to check if OHCB KPI was met on the case. (Replaces the need to use a Bucket field on reports.</description>
        <formula>IF(
AND( ISPICKVAL(Action_Subtype__c, &quot;First Customer Contact&quot;) , NOT(ISBLANK(SLA_Deadline__c)),  SLA_Minutes_in_Business_Hours__c  &lt; 61 ), TRUE, FALSE)</formula>
        <label>OHCB Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Deadline__c</fullName>
        <label>SLA Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Minutes__c</fullName>
        <description>Calculates EndTime-StartTime</description>
        <formula>IF( ISNULL(End_Time__c) || ISNULL(SLA_Deadline__c) , NULL, End_Time__c -  Start_Time__c)*1440</formula>
        <label>SLA Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Minutes_in_Business_Hours__c</fullName>
        <description>Work Out Business Hours between. Business Hours are taken from Company Settings</description>
        <label>SLA Minutes (Business Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>IF(((ISPICKVAL(Action_Subtype__c , &apos;First Customer Contact&apos;) || ISPICKVAL( Action_Subtype__c , &apos;Customer Contact&apos;)) &amp;&amp; !ISNULL(SLA_Deadline__c)
), 
IF( ISPICKVAL(Status, &apos;Completed&apos;), 
IF( End_Time__c &lt; SLA_Deadline__c &amp;&amp; !ISNULL(End_Time__c), 
&apos;SLA Met&apos;, 
&apos;SLA Missed&apos;), 
&apos;Within Deadline&apos;) , 
&apos;Not Applicable for SLA&apos;)</formula>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>